# urbansight

./: .gitignore
multicam-track/: main.py  pyproject.toml
track-api/: botsort.yaml  main.py  pyproject.toml
