[project]
name = "multicam-track"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.2.6",
    "opencv-python-headless>=4.11.0.86",
    "pillow>=11.2.1",
    "pyqt5>=5.15.11",
    "pyside6>=6.9.1",
    "timm>=1.0.15",
    "ultralytics>=8.3.146",
]
